get equipment by registryNumber